--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,11 +1,16 @@
-<div>
-    <h1><a href="/">Marc's Blog</a></h1>
-</div>
-test
-{% for post in posts %}
-    <div>
-        <p>published: {{ post.published_date }}</p>
-        <h1><a href="">{{ post.title }}</a></h1>
-        <p>{{ post.text|linebreaksbr }}</p>
-    </div>
-{% endfor %}
+{% extends 'blog/base.html' %}
+
+{% block content %}
+  {% for post in posts %}
+      <div class="card z-depth-4">
+        <div class="card-content">
+        <h5><a href="" style="color: #132731">{{ post.title }}</a></h5>
+          <p style="text-align: justify">{{ post.text|linebreaksbr }}</p><br>
+          <p style="color: #aeaeae">Publicado em: {{ post.published_date }}</p>
+        </div>
+        <div  class="card-action right-align">
+          <a href="{% url 'post_detail' pk=post.pk %}" class="blue-text text-darken-2">Ler Mais</a>
+        </div>
+      </div>
+  {% endfor %}
+{% endblock %}
