--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -2,15 +2,17 @@
 
 {% block content %}
   {% for post in posts %}
+    <div class="container" style="max-width:600px">
       <div class="card z-depth-4">
         <div class="card-content">
         <h5><a href="" style="color: #132731">{{ post.title }}</a></h5>
-          <p style="text-align: justify">{{ post.text|linebreaksbr }}</p><br>
+          <p style="text-align: justify">{{ post.text|linebreaksbr|slice:":255"}}...</p><br>
           <p style="color: #aeaeae">Publicado em: {{ post.published_date }}</p>
         </div>
-        <div  class="card-action right-align">
+        <div class="card-action right-align">
           <a href="{% url 'post_detail' pk=post.pk %}" class="blue-text text-darken-2">Ler Mais</a>
         </div>
       </div>
+    </div>
   {% endfor %}
 {% endblock %}
