--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,17 +1,34 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<div class="row" style="max-width:900px">
-  <div class="card-panel z-depth-2">
-      <div class="post">
+  <div class="container">
           {% if post.published_date %}
-              <div class="date">
-                  {{ post.published_date }}
-              </div>
+                {{ post.published_date }}
           {% endif %}
           <h3>{{ post.title }}</h3>
-          <p style="text-align: justify">{{ post.text|linebreaksbr }}</p>
-      </div>
-    </div>
-</div>
+          <p style="text-align: justify">{{ post.text|linebreaksbr }}</p><br>
+    {% if user.is_authenticated %}
+      <a class="btn waves-effect waves-light orange left" href="{% url 'post_edit' pk=post.pk %}"><i class="material-icons">create</i></a>
+      <a class="btn waves-effect waves-light red right" href="{% url 'post_remove' pk=post.pk %}"><i class="material-icons">close</i></a><br><br><br><br>
+    {% else %}
+      <a class="btn waves-effect waves-light blue right" href="{% url 'add_comment_to_post' pk=post.pk %}">Comentar</a><br><br>
+    {% endif %}
+    <h5>Comentários</h5><br>
+    {% for comment in post.comments.all %}
+        {% if user.is_authenticated or comment.approved_comment %}
+        <div class="card-panel">
+            <div class="date right" style="font-size:12px">{{ comment.created_date }}</div>
+            <strong>{{ comment.author }}</strong>
+            <p>{{ comment.text|linebreaks }}</p>
+            {% if not comment.approved_comment %}
+              <br>
+              <a class="btn blue waves-effect waves-light" href="{% url 'comment_approve' pk=comment.pk %}"><i class="material-icons">check</i></span></a>
+              <a class="btn red waves-effect waves-light" href="{% url 'comment_remove' pk=comment.pk %}"><i class="material-icons">close</i></a>
+            {% endif %}
+        </div>
+        {% endif %}
+    {% empty %}
+        <p>Sem comentários ainda :(</p>
+    {% endfor %}
+  </div><br>
 {% endblock %}
