Correção de espaçamentos

--- a/blog/templates/blog/add_comment_to_post.html
+++ b/blog/templates/blog/add_comment_to_post.html
@@ -7,5 +7,5 @@
         {{ form.as_p }}
         <button type="submit" class="save btn waves-effect waves-light blue right">Enviar</button>
     </form>
-  </div>
+  </div><br><br><br><br>
 {% endblock %}
