--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -11,7 +11,7 @@
       </div>
         <span>Texto:</span>
         {{ form.text }}
-        <button type="submit" class="save btn btn-default blue">Save</button>
+        <button type="submit" class="save btn btn-default blue">Salvar</button>
     </form>
-</div>
+</div><br><br>
 {% endblock %}
