Mudando para EM

--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -9,9 +9,16 @@
         {{ form.title }}
         <label for="{{form.title.id_for_label}}">Título</label>
       </div>
-        <span>Texto:</span>
+      <div class="input-field">
         {{ form.text }}
+        <label for="textarea1">Texto</label>
+      </div>
         <button type="submit" class="save btn btn-default blue">Salvar</button>
     </form>
 </div><br><br>
 {% endblock %}
+
+        {{ form.text }}
+<textarea name="text" cols="40" rows="10" required="" id="id_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</textarea>
+
+<textarea name="text" cols="40" rows="10" required="" id="id_text"></textarea>
