nova versao e about

--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,11 +18,48 @@
 
   {% block content %}
   {% endblock %}
+
+  <footer class="page-footer white z-depth-3">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="black-text">Sobre projeto</h5>
+          <p class="black-text text-lighten-4" style="text-align:justify">Somos um grupo de estudantes do curso de Sistema Para Internet
+             e estamos trabalhando nesse projeto que será parte das atividades comprobatórias de aprendizado do ultimo estágio.
+          </p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="black-text">Configurações</h5>
+          <ul>
+            <li><a class="black-text" href="#!">Link 1</a></li>
+            <li><a class="black-text" href="#!">Link 2</a></li>
+            <li><a class="black-text" href="#!">Link 3</a></li>
+            <li><a class="black-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="black-text">Contatos</h5>
+          <ul>
+            <li><a class="black-text" href="#!">Link 1</a></li>
+            <li><a class="black-text" href="#!">Link 2</a></li>
+            <li><a class="black-text" href="#!">Link 3</a></li>
+            <li><a class="black-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container black-text">
+      By <a class="black-text text-lighten-3" href="#">ADM</a>
+      </div>
+    </div>
+  </footer>
   <!--  Scripts-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="{% static 'js/materialize.js' %}"></script>
   <script src="{% static 'js/init.js' %}"></script>
-
 </body>
 
 </html>
