--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,9 +1,89 @@
 {% extends 'blog/base.html' %}
+{% load staticfiles %}
 
 {% block content %}
+
+<nav class="white" role="navigation">
+  <div class="nav-wrapper container">
+    <a id="logo-container" href="{% url 'post_list' %}" class="brand-logo">Grupo ADM</a>
+    <ul class="right hide-on-med-and-down">
+      <li><a href="{% url 'about' %}">Nossa Equipe</a></li>
+    </ul>
+
+    <ul id="nav-mobile" class="side-nav">
+      <li><a href="">Nossa Equipe</a></li>
+    </ul>
+    <a href="#" data-activates="nav-mobile" class="button-collapse black-text"><i class="material-icons">menu</i></a>
+  </div>
+</nav>
+
 <div class="container">
-  <h5><a href="" style="color: #132731">Sobre</a></h5>
-    <p style="text-align: justify">Sou estudante de Sistemas para internet, fiz esse Blog como parte de um projeto de programação em Django Python. Além de Django este Blog também utiliza o framework Materialize para a geração de toda a interface.</p>
-    <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <div class="section">
+    <div class="col s12 center">
+    <h3>Sistemas para Internet P2</h3>
+    <h5>Integrantes</h5>
+    <div class="container" style="margin-top:20px">
+    <div class="card z-depth-3">
+          <table class="bordered centered"style="font-size:16px">
+            <thead>
+              <tr>
+                  <th>Nome</th>
+                  <th>Matrícula</th>
+                  <th> </th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>Alexandre Silva dos Santos</td>
+                <td>1710018026</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Anibal de Medeiros Batista Filho</td>
+                <td>1710017987</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Dian Eric Audrey Alves da Silva</td>
+                <td>1710018863</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Evangil da Silva</td>
+                <td>1710018723</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Marcel Marques Matias</td>
+                <td>1710017713</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Rodrigo Oliveira Gomes dos Santos</td>
+                <td>1710019576</td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Ronaldo Costa Cordeiro</td>
+                <td>1710017723</td>
+                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <div class="" style="margin-top:55px; margin-bottom:55px">
+          <img class="materialboxed z-depth-5" data-caption="Nossa Equipe" width="100%" src="{% static 'grupo.jpeg' %}">
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
+
+
+<div class="container">
+  <h5><a href="" style="color: #132731">Sobre</a></h5>
+  <p style="text-align: justify">Sou estudante de Sistemas para internet, fiz esse Blog como parte de um projeto de programação em Django Python. Além de Django este Blog também utiliza o framework Materialize para a geração de toda a interface.</p>
+  <p style="text-align: justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
