--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -24,12 +24,11 @@
     <h5>Integrantes</h5>
     <div class="container" style="margin-top:20px">
     <div class="card z-depth-3">
-          <table class="bordered centered"style="font-size:16px">
+          <table class="bordered"style="font-size:16px">
             <thead>
               <tr>
                   <th>Nome</th>
                   <th>Matrícula</th>
-                  <th> </th>
               </tr>
             </thead>
 
@@ -37,37 +36,30 @@
               <tr>
                 <td>Alexandre Silva dos Santos</td>
                 <td>1710018026</td>
-                <td></td>
               </tr>
               <tr>
                 <td>Anibal de Medeiros Batista Filho</td>
                 <td>1710017987</td>
-                <td></td>
               </tr>
               <tr>
                 <td>Dian Eric Audrey Alves da Silva</td>
                 <td>1710018863</td>
-                <td></td>
               </tr>
               <tr>
                 <td>Evangil da Silva</td>
                 <td>1710018723</td>
-                <td></td>
               </tr>
               <tr>
                 <td>Marcel Marques Matias</td>
                 <td>1710017713</td>
-                <td></td>
               </tr>
               <tr>
                 <td>Rodrigo Oliveira Gomes dos Santos</td>
                 <td>1710019576</td>
-                <td></td>
               </tr>
               <tr>
                 <td>Ronaldo Costa Cordeiro</td>
                 <td>1710017723</td>
-                <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
               </tr>
             </tbody>
           </table>
