mudança de link relatorio

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -24,7 +24,7 @@
         <h5 class="header col s12 light" style="text-shadow: 1px 1px 2px black;">Um moderno sistema de gerenciamento de energia</h5>
       </div>
       <div class="row center">
-        <a href="https://docs.google.com/uc?export=download&id=0B1KPxQ6Uj8AGbHFQb1dtME9ub2c" id="download-button" class="btn-large waves-effect waves-light blue lighten-1">Baixar relatório</a>
+        <a href="https://drive.google.com/open?id=0B4sZHOhF5e6majQtUHlFLUxUbFk" id="download-button" class="btn-large waves-effect waves-light blue lighten-1">Baixar relatório</a>
       </div>
       <br><br>
 
