--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -2,21 +2,11 @@
 {% load staticfiles %}
 
 {% block content %}
-
-<nav class="white" role="navigation">
-  <div class="nav-wrapper container">
-    <a id="logo-container" href="{% url 'post_list' %}" class="brand-logo">Grupo ADM</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="{% url 'about' %}">Nossa Equipe</a></li>
-    </ul>
-
-    <ul id="nav-mobile" class="side-nav">
-      <li><a href="">Nossa Equipe</a></li>
-    </ul>
-    <a href="#" data-activates="nav-mobile" class="button-collapse black-text"><i class="material-icons">menu</i></a>
-  </div>
-</nav>
-
+<style media="screen">
+  .about{
+    display: none;
+  }
+</style>
 <div class="container">
   <div class="section">
     <div class="col s12 center">
