--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 
-<html lang="en">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>EcoManager</title>
+<html lang="pt-br">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <title>EcoManager</title>
 
-  <!-- CSS  -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <!-- CSS  -->
+    <link rel="icon" href="{% static 'ico.png' %}" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="{% static 'css/materialize.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="{% static 'css/style.css' %}" type="text/css" rel="stylesheet" media="screen,projection"/>
 
-</head>
+  </head>
 
 <body>
+  <header>
+    <nav class="white" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="{% url 'index' %}" class="brand-logo hide-on-small-only">Grupo ADM</a>
+        <a id="logo-container" href="{% url 'index' %}" class="brand-logo hide-on-med-and-up">ADM</a>
+        <ul class="right hide-on-med-and-down">
+          <li class="index"><a href="{% url 'index' %}">Início</a></li>
+          <li class="about"><a href="{% url 'about' %}">Nossa Equipe</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'logout' %}?next={% url 'index' %}">Sair</a></li>
+          {% else %}
+            <li class="login"><a href="{% url 'login' %}">Login</a></li>
+          {% endif %}
+        </ul>
 
-  {% block content %}
-  {% endblock %}
+        <ul id="nav-mobile" class="side-nav">
+          <li class="index"><a href="{% url 'index' %}">Início</a></li>
+          <li class="about"><a href="{% url 'about' %}">Nossa Equipe</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'logout' %}?next={% url 'index' %}">Sair</a></li>
+          {% else %}
+            <li class="login"><a href="{% url 'login' %}">Login</a></li>
+          {% endif %}
+        </ul>
+        <a href="#" data-activates="nav-mobile" class="button-collapse black-text"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+    {% block content %}
+    {% endblock %}
+  </main>
 
   <footer class="page-footer white z-depth-3">
     <div class="container">
@@ -27,32 +58,30 @@
           <p class="black-text text-lighten-4" style="text-align:justify">Somos um grupo de estudantes do curso de Sistema Para Internet
              e estamos trabalhando nesse projeto que será parte das atividades comprobatórias de aprendizado do ultimo estágio.
           </p>
-
-
         </div>
         <div class="col l3 s12">
-          <h5 class="black-text">Configurações</h5>
+          <h5 class="black-text">Acesso</h5>
           <ul>
-            <li><a class="black-text" href="#!">Link 1</a></li>
-            <li><a class="black-text" href="#!">Link 2</a></li>
-            <li><a class="black-text" href="#!">Link 3</a></li>
-            <li><a class="black-text" href="#!">Link 4</a></li>
+            <li><a href="{% url 'login' %}">Login</a></li>
+            <li><a href="{% url 'about' %}">Sobre Equipe</a></li>
+            <!-- <li><a class="black-text" href="#!">Link 3</a></li>
+            <li><a class="black-text" href="#!">Link 4</a></li> -->
           </ul>
         </div>
         <div class="col l3 s12">
           <h5 class="black-text">Contatos</h5>
           <ul>
-            <li><a class="black-text" href="#!">Link 1</a></li>
-            <li><a class="black-text" href="#!">Link 2</a></li>
-            <li><a class="black-text" href="#!">Link 3</a></li>
-            <li><a class="black-text" href="#!">Link 4</a></li>
+            <li><span class="black-text">(00) 0000-0000</span></li>
+            <li><span class="black-text">email@email.com</span></li>
+            <!-- <li><a class="black-text" href="#!">Link 3</a></li>
+            <li><a class="black-text" href="#!">Link 4</a></li> -->
           </ul>
         </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container black-text">
-      By <a class="black-text text-lighten-3" href="#">ADM</a>
+      By <a class="black-text text-lighten-3" href="{% url 'about' %}">ADM</a>
       </div>
     </div>
   </footer>
