--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -2,26 +2,20 @@
 {% load staticfiles %}
 
 {% block content %}
-<nav class="white" role="navigation">
-  <div class="nav-wrapper container">
-    <a id="logo-container" href="#" class="brand-logo">Grupo ADM</a>
-    <ul class="right hide-on-med-and-down">
-      <li><a href="{% url 'about' %}">Nossa Equipe</a></li>
-    </ul>
-
-    <ul id="nav-mobile" class="side-nav">
-      <li><a href="{% url 'about' %}">Nossa Equipe</a></li>
-    </ul>
-    <a href="#" data-activates="nav-mobile" class="button-collapse black-text"><i class="material-icons">menu</i></a>
-  </div>
-</nav>
-
+<style media="screen">
+  .index{
+    display:none;
+  }
+</style>
 <div id="index-banner" class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
-      <h1 class="header center white-text" style="text-shadow: 1px 1px 2px black;">Eco Manager</h1>
+      <div class="center">
+        <img class="header hide-on-med-and-up" src="{% static 'eco.png' %}" alt="EcoManager" width="80%">
+        <img class="header hide-on-small-only" src="{% static 'eco.png' %}" alt="EcoManager" width="350px">
+      </div>
       <div class="row center">
-        <h5 class="header col s12 light" style="text-shadow: 1px 1px 2px black;">Um moderno sistema de gerenciamento de energia</h5>
+        <h5 class="header col s12" style="text-shadow: 1px 1px 2px black;">Um moderno sistema de gerenciamento de energia</h5>
       </div>
       <div class="row center">
         <a href="https://docs.google.com/uc?export=download&id=0B1KPxQ6Uj8AGbHFQb1dtME9ub2c" id="download-button" class="btn-large waves-effect waves-light blue lighten-1">Baixar relatório</a>
@@ -84,13 +78,12 @@
 <div class="parallax-container valign-wrapper">
   <div class="section no-pad-bot">
     <div class="container">
-      <div class="row center" style="margin-top:-22px">
-        <h5 class="header col s12 light" style="text-shadow: 1px 1px 2px black;">Controle e acompanhe seu consumo energético em qualquer lugar</h5>
+      <div class="row center" style="margin-top:-40px">
+        <h5 class="header col s12" style="text-shadow: 1px 1px 2px black;">Controle e acompanhe seu consumo energético em qualquer lugar</h5>
       </div>
-      <div class="row center">
+      <div class="center">
         <a href="https://docs.google.com/uc?export=download&id=0B1KPxQ6Uj8AGOS1wRnpsb25jQlk" id="download-button" class="btn-large waves-effect waves-light blue lighten-1">Baixar APK</a>
         <a href="http://www.youtube.com/watch?v=WIcqigws3KI" style="margin-left:10px" id="download-button" class="btn-large waves-effect waves-light orange">Ver Vídeo</a>
-
       </div>
     </div>
   </div>
@@ -139,7 +132,7 @@
   <div class="section no-pad-bot">
     <div class="container">
       <div class="row center">
-        <h5 class="header col s12 light" style="text-shadow: 1px 2px 5px black;">Economia e contribuição para um mundo melhor</h5>
+        <h5 class="header col s12" style="text-shadow: 1px 2px 5px black;">Economia e contribuição para um mundo melhor</h5>
       </div>
     </div>
   </div>
