--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -18,7 +18,8 @@
         <h5 class="header col s12" style="text-shadow: 1px 1px 2px black;">Um moderno sistema de gerenciamento de energia</h5>
       </div>
       <div class="row center">
-        <a href="https://drive.google.com/file/d/0B4sZHOhF5e6mTXpaXzZkYUowdWc/view?usp=sharing" id="download-button" class="btn-large waves-effect waves-light blue lighten-1">Baixar relatório</a>
+        <a href="https://drive.google.com/file/d/0B4sZHOhF5e6mdWtDRmhMX3dhMjQ/view?usp=sharing" id="download-button" class="btn-large waves-effect waves-light blue lighten-1" style="margin:10px">Baixar relatório</a>
+        <a href="https://drive.google.com/file/d/0B4sZHOhF5e6mb25jcTVTRS1CbHM/view?usp=sharing" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Baixar Análise</a>
       </div>
       <br><br>
 
